log
Fri 29 Mar 2024 11:44:05 PM UTC: 
 tests:  0|6
total_score: 0/70
c6d3cc2
Fri 29 Mar 2024 11:46:19 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   35 |   lista->head = NULL;
      |   ^~~~~
      |   list
list.c:35:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:10: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   List * list = (List *)malloc(sizeof(List));
      |          ^~~~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e5a4949
Fri 29 Mar 2024 11:46:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7de38cd
Fri 29 Mar 2024 11:47:54 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d478a3e
Fri 29 Mar 2024 11:48:27 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
5b4de9a
Fri 29 Mar 2024 11:49:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
febb003
Fri 29 Mar 2024 11:49:29 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
10e4243
Fri 29 Mar 2024 11:50:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
68132c1
Fri 29 Mar 2024 11:50:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a2c1891
